spade-tests/src/snapshots/spade_tests__ast_lowering__inst_function_used.snap
---
source: spade-tests/src/ast_lowering.rs
---
// See https://gitlab.com/spade-lang/spade/-/issues/160
mod a {
    fn foo() -> bool { true }
}

use a::foo;

entity test() -> bool {
    inst foo()
}


error: Unexpected `inst` for function call
  ┌─ testinput:9:5
  │
3 │     fn foo() -> bool { true }
  │     -- foo is defined as a function here
  ·
9 │     inst foo()
  │     ^^^^ --- Because foo is a function
  │     │     
  │     Unexpected `inst`
  │
  = Consider removing the `inst`
  │
9 │     inst foo()
  │     ----
